# setec-computation

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/models/: __init__.py  extended_msa.py  msa.py
app/routers/: __init__.py  control_charts.py  health.py  msa.py
app/services/: __init__.py  extended_msa_calculator.py  msa_calculator.py
app/validators/: __init__.py
tests/: __init__.py  conftest.py  test_extended_msa_calculator.py  test_extended_msa_endpoint.py  test_extended_msa_models.py  test_health.py  test_main.py  test_msa_calculator.py  test_msa_endpoint.py  test_msa_models.py
